Added several browser windows synchronization

--- a/fedor/templates/base.html
+++ b/fedor/templates/base.html
@@ -15,6 +15,7 @@
         <script src="/js/hotkeys.js"></script>
         <script src="/js/ws.js"></script>
         <script src="/js/scroll.js"></script>
+        <script src="/js/notepad.js"></script>
         <script src="/js/base.js"></script>
     {% endblock scripts_area %}
 </html>
