Basic editing in dashboard mode now supported

--- a/fedor/templates/dashboard.html
+++ b/fedor/templates/dashboard.html
@@ -3,6 +3,7 @@
 {% block scripts_area %}
     {{ super() }}
     <script src="/js/connection.js"></script>
+    <script src="/js/base.js"></script>
     <script src="/js/dashboard.js"></script>
 {% endblock %}
 
